// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`# integration test ## should generate design 1`] = `
"info: Initializing git repository testoutput/.git
info: Generating testoutput/.babelrc from template templates/.babelrc._
info: Generating testoutput/.editorconfig from template templates/.editorconfig._
info: Generating testoutput/.eslintignore from template templates/.eslintignore._
info: Generating testoutput/.eslintrc.js from template templates/.eslintrc.js._
info: Generating testoutput/.gitignore from template templates/.gitignore._
info: Generating testoutput/.npmignore from template templates/.npmignore._
info: Generating testoutput/.prettierrc from template templates/.prettierrc._
info: Generating testoutput/Jenkinsfile from template templates/Jenkinsfile._
info: Generating testoutput/package.json from template templates/package.json._
info: Generating testoutput/README.md from template templates/README.md._
info: Generating testoutput/src/js/__tests__/integration.js from template templates/src/js/__tests__/integration.js._
info: Generating testoutput/src/test/fixture/design.js from template templates/src/test/fixture/design.js._
info: Generating testoutput/scripts/sgen-fixture.sh from template templates/scripts/sgen.sh._
info: Committed generated files
info: Attempting to use branch master-sgen-generated
info: Creating new branch master-sgen-generated
warn: Checkout out branch master
warn: Checkout out branch master
info: sgen is done
"
`;

exports[`# integration test ## should generate design and run sgen commands 1`] = `
"info: Initializing git repository testoutput/.git
info: Generating testoutput/.babelrc from template templates/.babelrc._
info: Generating testoutput/.editorconfig from template templates/.editorconfig._
info: Generating testoutput/.eslintignore from template templates/.eslintignore._
info: Generating testoutput/.eslintrc.js from template templates/.eslintrc.js._
info: Generating testoutput/.gitignore from template templates/.gitignore._
info: Generating testoutput/.npmignore from template templates/.npmignore._
info: Generating testoutput/.prettierrc from template templates/.prettierrc._
info: Generating testoutput/Jenkinsfile from template templates/Jenkinsfile._
info: Generating testoutput/package.json from template templates/package.json._
info: Generating testoutput/README.md from template templates/README.md._
info: Generating testoutput/src/js/__tests__/integration.js from template templates/src/js/__tests__/integration.js._
info: Generating testoutput/src/test/fixture/design.js from template templates/src/test/fixture/design.js._
info: Generating testoutput/scripts/sgen-fixture.sh from template templates/scripts/sgen.sh._
info: Committed generated files
info: Attempting to use branch master-sgen-generated
info: Creating new branch master-sgen-generated
warn: Checkout out branch master
warn: Checkout out branch master
info: sgen is done
"
`;

exports[`# integration test ## should generate design with merge 1`] = `
"info: Initializing git repository testoutput/.git
info: Generating testoutput/.babelrc from template templates/.babelrc._
info: Generating testoutput/.editorconfig from template templates/.editorconfig._
info: Generating testoutput/.eslintignore from template templates/.eslintignore._
info: Generating testoutput/.eslintrc.js from template templates/.eslintrc.js._
info: Generating testoutput/.gitignore from template templates/.gitignore._
info: Generating testoutput/.npmignore from template templates/.npmignore._
info: Generating testoutput/.prettierrc from template templates/.prettierrc._
info: Generating testoutput/Jenkinsfile from template templates/Jenkinsfile._
info: Generating testoutput/package.json from template templates/package.json._
info: Generating testoutput/README.md from template templates/README.md._
info: Generating testoutput/src/js/__tests__/integration.js from template templates/src/js/__tests__/integration.js._
info: Generating testoutput/src/test/fixture/design.js from template templates/src/test/fixture/design.js._
info: Generating testoutput/scripts/sgen-fixture.sh from template templates/scripts/sgen.sh._
info: Committed generated files
info: Attempting to use branch master-sgen-generated
info: Creating new branch master-sgen-generated
warn: Checkout out branch master
warn: Checkout out branch master
info: sgen is done
"
`;

exports[`# integration test ## should generate design with merge 2`] = `
"info: Opening git repository testoutput/.git
info: Stashing branch master
info: Attempting to use branch master-sgen-generated
warn: Checkout out branch master-sgen-generated
info: Generating testoutput/.babelrc from template templates/.babelrc._
info: Generating testoutput/.editorconfig from template templates/.editorconfig._
info: Generating testoutput/.eslintignore from template templates/.eslintignore._
info: Generating testoutput/.eslintrc.js from template templates/.eslintrc.js._
info: Generating testoutput/.gitignore from template templates/.gitignore._
info: Generating testoutput/.npmignore from template templates/.npmignore._
info: Generating testoutput/.prettierrc from template templates/.prettierrc._
info: Generating testoutput/Jenkinsfile from template templates/Jenkinsfile._
info: Generating testoutput/package.json from template templates/package.json._
info: Generating testoutput/README.md from template templates/README.md._
info: Generating testoutput/src/js/__tests__/integration.js from template templates/src/js/__tests__/integration.js._
info: Generating testoutput/src/test/fixture/design.js from template templates/src/test/fixture/design.js._
info: Generating testoutput/scripts/sgen-fixture.sh from template templates/scripts/sgen.sh._
warn: Checkout out branch master-sgen-generated
warn: Checkout out branch master-sgen-generated
warn: Nothing changed in generated files
warn: Checkout out branch master
info: sgen is done
"
`;

exports[`# integration test ## should print help options 1`] = `
"Usage:
  node sgen [OPTION]

Options:
  -m, --map=ARG+       mapping files
  -d, --design=ARG+    design files
  -e, --extension=ARG+ extension directories or files
  -o, --output=ARG     output directory for generated files
      --overwrite=ARG  Overwrite modes, can be one of skip, regen, error or merge                         (default: skip)
      --forceOverwrite Override overwrite flags in the generator map with the one provided on --overwrite
  -h, --help           display this help
"
`;
